fix: :bug: fixed sidebar collapsing feature. bottom buttons was overlaping content

--- a/src/components/layout/sidebar/Sidebar.scss
+++ b/src/components/layout/sidebar/Sidebar.scss
@@ -1,6 +1,7 @@
 .collapsed .sidebar {
   a span {
     color: transparent;
+    display: none;
   }
   a svg:last-child {
     color: transparent;
@@ -8,24 +9,39 @@
   a.sublink {
     padding-left: var(--space-sm); 
   }
+  #collapse--button{
+    cursor: e-resize;
+  }
+  button {
+    display: inline;
+    width: min-content;
+    padding : var(--space-sm);
+    svg{ 
+      margin: 0; padding: 0;
+    }
+    span {
+      display: none;
+    }
+  }
+
 }
 
 aside.sidebar {
   position: relative;
+  // border:1px solid red;
+  height: min-content;
   #collapse--button{
     position: absolute;
-    top:0;
-    bottom:0;
+    top:var(--space-lg);
     right:0px;
-    margin:auto;
-    height: 100px;
-    width: 6px;
-    cursor: ew-resize;
+    height: calc(100% - calc(var(--space-lg) * 2)) ;
+    width: calc(var(--borderWidth) * 2 );
+    cursor: w-resize;
     border-radius: var(--borderRadius);
-    background-color: var(--redDark);
-    z-index: 20;
+    background-color: var(--color-gray);
+    z-index: 11;
     &:hover {
-      background-color: var(--primary-color);
+      background-color: var(--color-black);
 
     }
   }
@@ -34,7 +50,7 @@ aside.sidebar {
   flex-direction: column;
   row-gap: calc(var(--padding) / 2);
   // border:1px solid red;
-  overflow: hidden;
+  // overflow: hidden;
   
   #bottom {
     width: var(--sidebarWidth);
